# giga4dqm

./: .env.example  .gitignore  README.md  SETUP_FROM_SCRATCH.md  docker-compose.yml  pyproject.toml  setup_loan_db.md  streamlit_app.py  workflow.md
Script_DB/: README.md  fn_add_arr_log.sql  fn_collect_stat.sql  fn_create_obj_test1.sql  fn_dbc_partition_table_name_for.sql  fn_execute_run.sql  fn_explain_to_debug.sql  fn_gen_data_test2.sql  fn_gen_random_uuid.sql  fn_generate_agr_cred.sql  fn_generate_agr_cred_coa.sql  fn_generate_agr_cred_coa_period_prep_bal.sql  fn_generate_agr_cred_optn.sql  fn_generate_coa_data.sql  fn_generate_je_line_data.sql  fn_generate_tech_tbl_coa_bal_h.sql  fn_prc_debug.sql  fn_prc_error_message.sql  fn_run_calc_d_agr_cred_coa_period_calc_dt_test3.sql  fn_run_test2.sql  fn_save_prc_log.sql  parallel_run_all_test_sep.py  parallel_run_all_tests.py  parallel_run_test1.py  parallel_run_test1_fltr.py  parallel_run_test1_fltr_skew.py  parallel_run_test1_skew.py  parallel_run_test2.py  parallel_run_test2_sep.py  parallel_run_test3.py  parallel_run_test3_sep.py  readme.txt  run_test1.sql  run_test2.sql  run_test3.sql  test2_d_agr_cred_coa_period_prep_main_debs.sql  test2_d_agr_cred_coa_period_prep_main_debs_separate.sql  test3_d_agr_cred_coa_period_calc_dt.sql  test3_d_agr_cred_coa_period_calc_dt_separate.sql  test_1_je_header_fltr.sql  (+3 more)
Script_DB_pg/: README.md  bootstrap_objects.sql  fn_add_arr_log.sql  fn_collect_stat.sql  fn_create_obj_test1.sql  fn_dbc_partition_table_name_for.sql  fn_drop_gen_data_tables.sql  fn_gen_data_test1.sql  (+27 more)
(+41 files in other folders)
