[project]
name = "giga4dqm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "gigachat>=0.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langfuse>=3.3.1",
    "langgraph>=1.1.9",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
